--- a/Bump/Bump/Views/MainPageView/MainPageDetail.xaml
+++ b/Bump/Bump/Views/MainPageView/MainPageDetail.xaml
@@ -6,4 +6,45 @@
              xmlns:XFMaterial="clr-namespace:XF.Material.Forms.UI;assembly=XF.Material"
              XFMaterial:MaterialNavigationPage.AppBarTitleTextColor="White"
              XFMaterial:MaterialNavigationPage.StatusBarColor="#DC384D"
-             XFMaterial:MaterialNavigationPage.AppBarColor="#DC384D"/>
+             XFMaterial:MaterialNavigationPage.AppBarColor="#DC384D"
+             xmlns:ViewModels="clr-namespace:Bump.ViewModels"
+             xmlns:Enums="clr-namespace:BLL.Enums;assembly=BLL">
+    <ContentPage.BindingContext>
+        <ViewModels:MainPageDetailViewModel/>
+    </ContentPage.BindingContext>
+    <ContentPage.Content>
+        <Grid Margin="0" Padding="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            
+            <StackLayout Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2"
+                         Margin="0" Padding="0" Spacing="0" x:Name="MapGoogle"/>
+            
+            <StackLayout Grid.Row="1" Grid.Column="1" Margin="0" Padding="10" Spacing="10" 
+                         VerticalOptions="Center" HorizontalOptions="End"
+                         IsVisible="{Binding IsAuthentication}">
+                <Button Image="speed" BackgroundColor="White"
+                        HeightRequest="60" WidthRequest="60" 
+                        VerticalOptions="Start" HorizontalOptions="Start"
+                        CornerRadius="30" BorderColor="Black" BorderWidth="1"
+                        Command="{Binding ReportDangerCommand}" CommandParameter="{x:Static Enums:DangerType.RADAR}"/>
+                <Button Image="bump1" BackgroundColor="White"
+                        HeightRequest="60" WidthRequest="60" 
+                        VerticalOptions="Start" HorizontalOptions="Start"
+                        CornerRadius="30" Padding="0" BorderColor="Black" BorderWidth="1"
+                        Command="{Binding ReportDangerCommand}" CommandParameter="{x:Static Enums:DangerType.BUMP}"/>
+                <Button Image="digger" BackgroundColor="White"
+                        HeightRequest="60" WidthRequest="60" 
+                        VerticalOptions="Start" HorizontalOptions="Start"
+                        CornerRadius="30" Padding="0" BorderColor="Black" BorderWidth="1"
+                        Command="{Binding ReportDangerCommand}" CommandParameter="{x:Static Enums:DangerType.PIT}"/>
+            </StackLayout>
+        </Grid>
+    </ContentPage.Content>
+</ContentPage>
