--- a/Bump/Bump/Views/MainPageView/MainPageFlyout.xaml
+++ b/Bump/Bump/Views/MainPageView/MainPageFlyout.xaml
@@ -31,6 +31,11 @@
                     <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer Command="{Binding OpenSignInPageCommand}"/>
                     </StackLayout.GestureRecognizers>
+                    <StackLayout.Triggers>
+                        <DataTrigger TargetType="StackLayout" Binding="{Binding IsAuthentication}" Value="True">
+                            <Setter Property="IsVisible" Value="False"/>
+                        </DataTrigger>
+                    </StackLayout.Triggers>
                 </StackLayout>
                 
                 <StackLayout Orientation="Horizontal" Margin="0" Padding="0" Spacing="20">
