--- a/Bump/Bump/Views/MainPageView/MainPageDetail.xaml
+++ b/Bump/Bump/Views/MainPageView/MainPageDetail.xaml
@@ -15,8 +15,8 @@
     <ContentPage.Content>
         <Grid Margin="0" Padding="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
@@ -26,9 +26,8 @@
             <StackLayout Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2"
                          Margin="0" Padding="0" Spacing="0" x:Name="MapGoogle"/>
             
-            <StackLayout Grid.Row="1" Grid.Column="1" Margin="0" Padding="10" Spacing="10" 
-                         VerticalOptions="Center" HorizontalOptions="End"
-                         IsVisible="{Binding IsAuthentication}">
+            <StackLayout Grid.Row="1" Grid.Column="0" Margin="0" Padding="10" Spacing="10" 
+                         x:Name="DangerButtons" VerticalOptions="Center" HorizontalOptions="Start">
                 <Button Image="speed" BackgroundColor="White"
                         HeightRequest="60" WidthRequest="60" 
                         VerticalOptions="Start" HorizontalOptions="Start"
