--- a/Bump/Bump/Views/WorkThrough.xaml
+++ b/Bump/Bump/Views/WorkThrough.xaml
@@ -50,10 +50,10 @@
                 
                 <StackLayout Margin="0" Padding="0" Spacing="20" >
                     <StackLayout >
-                        <Button ImageSource="speed" Text="Radar"  TextColor="#DC384D" TextTransform="None"  FontSize="Large"
+                        <Button ImageSource="radr" Text="Radar/Camera"  TextColor="#DC384D" TextTransform="None"  FontSize="Large"
                         FontAttributes="Bold" ContentLayout="left,10" HorizontalOptions="StartAndExpand" BackgroundColor="Transparent" 
                            />
-                        <Label Text="When you click on the button, your current location will be taken, then you must choose the speed for the radar."
+                        <Label Text="When you click on the button, your current location will be taken, then you must choose the speed for the radar/camera."
                            FontSize="Medium" FontAttributes="Bold"/>
                     </StackLayout>
                     <StackLayout>
