--- a/Bump/Bump/Views/ForgetPassword.xaml
+++ b/Bump/Bump/Views/ForgetPassword.xaml
@@ -29,7 +29,7 @@
                 <Button Text="{Utils:Translate Send_Email}"  TextTransform="None" 
                         TextColor="White" FontAttributes="Bold" 
                         BackgroundColor="#DC384D" CornerRadius="5" 
-                        FontSize="Medium" />
+                        FontSize="Medium" Command="{Binding SendEmailForgetPassword}" />
             </StackLayout>
             </StackLayout>
     </ContentPage.Content>
