--- a/Bump/Bump/Views/MainPageView/MainPageFlyout.xaml
+++ b/Bump/Bump/Views/MainPageView/MainPageFlyout.xaml
@@ -67,17 +67,12 @@
                     </StackLayout.GestureRecognizers>
                 </StackLayout>
 
-                <StackLayout Orientation="Horizontal" Margin="0" Padding="0" Spacing="20">
+                <StackLayout Orientation="Horizontal" Margin="0" Padding="0" Spacing="20" IsVisible="{Binding IsAuthentication}">
                     <Image Source="logout" Aspect="AspectFit"/>
                     <Label Text="{Utils:Translate Log_out}" TextColor="White" FontAttributes="Bold" VerticalTextAlignment="Center"/>
                     <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer Command="{Binding OpenMainPageCommand}"/>
                     </StackLayout.GestureRecognizers>
-                    <StackLayout.Triggers>
-                        <DataTrigger TargetType="StackLayout" Binding="{Binding IsAuthentication}"  Value="False">
-                            <Setter Property="IsVisible" Value="True"/>
-                        </DataTrigger>
-                    </StackLayout.Triggers>
                 </StackLayout>
                 
             </StackLayout>
