--- a/Bump/Bump/Views/MainPageView/MainPageFlyout.xaml
+++ b/Bump/Bump/Views/MainPageView/MainPageFlyout.xaml
@@ -11,8 +11,7 @@
     <Grid Margin="0" Padding="0">
         <Image Source="way_4" Aspect="AspectFill"/>
         <StackLayout Margin="0" Padding="10" Spacing="30" BackgroundColor="#CAB44C5A">
-            <Image Source="undraw_features"/>
-            <StackLayout Orientation="Horizontal" Margin="10,0" Padding="0" Spacing="0"
+            <StackLayout Orientation="Horizontal" Margin="10,100,10,40" Padding="0" Spacing="0"
                      HorizontalOptions="FillAndExpand">
                 <Button Text="English" TextTransform="None" TextColor="#FFFFFF"
                         FontAttributes="Bold" HorizontalOptions="FillAndExpand" 
@@ -24,10 +23,10 @@
                         Command="{Binding ChangeLanguageCommand}" CommandParameter="ar-JO"/>
             </StackLayout>
 
-            <StackLayout Margin="0" Padding="0" Spacing="20">
+            <StackLayout Margin="0" Padding="0" Spacing="30">
                 <StackLayout Orientation="Horizontal" Margin="0" Padding="0" Spacing="10">
                     <Image Source="puzzle" Aspect="AspectFit"/>
-                    <Label Text="{Utils:Translate Contribute}" TextColor="White" FontAttributes="Bold" VerticalTextAlignment="Center"/>
+                    <Label Text="{Utils:Translate Register}" TextColor="White" FontAttributes="Bold" VerticalTextAlignment="Center"/>
                     <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer Command="{Binding OpenSignInPageCommand}"/>
                     </StackLayout.GestureRecognizers>
