--- a/Bump/Bump/Views/WorkThrough.xaml
+++ b/Bump/Bump/Views/WorkThrough.xaml
@@ -29,7 +29,7 @@
 
                 <Image Source="undraw_Destination" HorizontalOptions="CenterAndExpand"/>
                 <Label Text="If you want to contribute with us in
-                        determining the location of bumps, radars and pits, press on, then press on (contribute) , then sign in /sign up" 
+                        determining the location of bumps, radars and pits, then click this button (Register) , then sign in /sign up" 
                     Margin="20,50,10,0" FontSize="Medium" FontAttributes="Bold" />
                 <Label Text="You will receive alerts previously entered by contributors anyway Happy trip" 
                    Margin="20,15,10,0" FontSize="Medium" FontAttributes="Bold"/>
@@ -53,28 +53,28 @@
                         <Button ImageSource="radr" Text="Radar/Camera"  TextColor="#DC384D" TextTransform="None"  FontSize="Large"
                         FontAttributes="Bold" ContentLayout="left,10" HorizontalOptions="StartAndExpand" BackgroundColor="Transparent" 
                            />
-                        <Label Text="When you click on the button, your current location will be taken, then you must choose the speed for the radar/camera."
+                        <Label Text="click this button , Radar/Camera location will be taken."
                            FontSize="Medium" FontAttributes="Bold"/>
                     </StackLayout>
                     <StackLayout>
                         <Button ImageSource="bump" Text="Bump" TextColor="#DC384D" TextTransform="None" FontSize="Large" 
                         FontAttributes="Bold" ContentLayout="left,10" HorizontalOptions="StartAndExpand" BackgroundColor="Transparent"
                             />
-                    <Label Text="When clicking on the button, your current location will be taken."
+                        <Label Text="click this button , bump location will be taken."
                            FontSize="Medium" FontAttributes="Bold"/>
                     </StackLayout>
                     <StackLayout>
                         <Button ImageSource="digger" Text="Pit" TextColor="#DC384D" TextTransform="None" FontSize="Large" 
                         FontAttributes="Bold" ContentLayout="left,10" HorizontalOptions="StartAndExpand" BackgroundColor="Transparent"
                             />
-                    <Label Text="When clicking on the button, your current location will be taken."
+                        <Label Text="click this button , pit location will be taken."
                            FontSize="Medium" FontAttributes="Bold"/>
                     </StackLayout>
                     <StackLayout>
-                        <Button ImageSource="cancel" Text="Delete" TextColor="#DC384D" TextTransform="None" FontSize="Large" 
+                        <Button ImageSource="cancel" Text="Confirm" TextColor="#DC384D" TextTransform="None" FontSize="Large" 
                         FontAttributes="Bold" ContentLayout="left,10" HorizontalOptions="StartAndExpand" BackgroundColor="Transparent" 
                             />
-                    <Label Text="When you click the bottom that mean its a wrong alert, but for us to  be more sure 3 users should click the bottom to delete it."
+                        <Label Text="Choose if you want to confirm the location or delete it ."
                            FontSize="Medium" FontAttributes="Bold"/>
                     </StackLayout>
                 </StackLayout>
