--- a/Bump/Bump/Views/MainPageView/MainPageDetail.xaml
+++ b/Bump/Bump/Views/MainPageView/MainPageDetail.xaml
@@ -19,21 +19,14 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             
-            <StackLayout Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2"
+            <StackLayout Grid.Row="0" Grid.RowSpan="2" 
+                         Grid.Column="0" Grid.ColumnSpan="2"
                          Margin="0" Padding="0" Spacing="0" x:Name="MapGoogle"/>
-            <StackLayout Grid.Row="0" Grid.Column="0" Margin="0" Padding="10" Spacing="10" 
-                         x:Name="SignalRButtons" VerticalOptions="Center" HorizontalOptions="Start">
-                <Button BackgroundColor="Red" HeightRequest="60" WidthRequest="60" 
-                        VerticalOptions="Start" HorizontalOptions="Start"
-                        CornerRadius="30" BorderWidth="1"
-                        Clicked="ReconnectSignalR"/>
-            </StackLayout>
-            <StackLayout Grid.Row="2" Grid.Column="0" Margin="0" Padding="10" Spacing="10" 
+            <StackLayout Grid.Row="1" Grid.Column="0" Margin="0" Padding="10" Spacing="10" 
                          x:Name="DangerButtons" VerticalOptions="Center" HorizontalOptions="Start">
                 <Button Image="radr" BackgroundColor="White"
                         HeightRequest="60" WidthRequest="60" 
